change simbricks.github.io to simbricks.io

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </p>
           <p>
             As part of my Master's thesis, I am working on
-            <a href="https://simbricks.github.io" target="_blank">SimBricks</a>, a full-system
+            <a href="https://www.simbricks.io" target="_blank">SimBricks</a>, a full-system
             simulation framework. More specifically, I am creating a framework to conduct scalable
             end-to-end simulations with focus on networking protocols like TCP and its various
             congestion control algorithms.
@@ -63,7 +63,7 @@
         A list of projects I am currently working on.
         <div class="project-container">
 
-          <a href="https://simbricks.github.io" target="_blank">
+          <a href="https://www.simbricks.io" target="_blank">
             <div class="project-card">
               <img src="static/images/simbricks_logo.svg" class="center project-img"/>
               <h3 class="project-title">SimBricks</h3>
@@ -74,7 +74,7 @@
             </div>
           </a>
 
-          <a href="https://simbricks.github.io/projects/cc_eval.html" target="_blank">
+          <a href="https://www.simbricks.io/projects/cc_eval.html" target="_blank">
             <div class="project-card">
               <img src="static/images/placeholder.svg" class="center project-img"/>
               <h3 class="project-title">E2E Congestion Control Testbed</h3>
